--- a/css/main.css
+++ b/css/main.css
@@ -1,121 +1,335 @@
-/*----- main -----*/
-
+/* General Styles */
 body {
     margin: 0;
+    padding: 0;
+    background-color: #fffade;
     display: flex;
     flex-direction: column;
-    position: relative;
-    min-height: 100vh;
+    height: 100%;
     width: 100%;
-    background-color: #fffade;
+    position: absolute;
 }
 
 .center {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    position: relative;
     align-items: center;
     justify-content: center;
-    pointer-events: none;
-    gap: 10px;
-    padding: 20px;
-    text-align: center;
+    height: 100%;
+    width: 100%;
 }
 
-/*----- load screen -----*/
-
-#loading {
-    color: white;
-    width: 100vw;
-    height: 100vh;
-    background-color: #808080;
+/* Loading Screen */
+#load {
     position: fixed;
-    z-index: 114;
+    background: #f8fbf2;
+    z-index: 9999;
     opacity: 1;
-    transition:opacity 1s ease-out;
-    pointer-events: none;
+    transition: opacity 1s ease-in-out;
+}
+
+#load img {
+    margin: 4px;
+}
+
+#load span {
+    color: #333;
+}
+
+/* Main Content */
+#main {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    transform: translateY(-20px);
+    transition: transform 0.5s ease-in-out;
+    padding-top: 48px;
+}
+
+/* Navbar */
+#navbar {
+    background-color: #d7d2b4;
+    height: 48px;
+    position: fixed;
+    display: flex;
+    width: 100%;
+    z-index: 2;
+    justify-content: space-between;
+    box-shadow: 0 2px 10px black;
+}
+
+#navbar .link {
+    display: flex;
+    align-items: center;
     user-select: none;
 }
 
-#loading img{
-    width: 200px;
+#navbar .link a,
+#navbar .link div {
+    margin-left: 30px;
+    color: #000;
+    font-family: 'slboot', sans-serif;
+    text-decoration: none;
+    transition: color 300ms, text-shadow 300ms;
 }
 
-[id=dark] {
+#navbar .link span {
+    font-family: 'MDL2';
+    vertical-align: -2px;
+}
+
+#navbar .link #nav {
     display: none;
 }
 
-@media (max-width: 800px) {
-    .post-content {
-        min-width: 85%;
-    }
-    .card {
-        width: 100%;
-    }
+#navbar a:hover,
+#navbar #nav:hover {
+    color: #fff;
+    text-shadow: 4px 4px 4px #000;
+    cursor: pointer;
 }
 
-#footer {
+#navbar img {
+    width: 160px;
+    transform: rotate(-5deg);
+    transition: all 500ms;
+}
+
+#navbar img:hover {
+    transform: rotate(10deg);
+}
+
+#navbar img:active {
+    transition: transform 500ms ease-in-out;
+    transform: rotate(360deg);
+}
+
+#navbar button {
+    padding: 10px;
+    margin: 4px;
+    background-color: transparent;
+    border: none;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    transition: background-color 200ms;
+}
+
+#navbar button span {
+    font-family: 'MDL2';
+    font-size: 20px;
+    color: #000;
+}
+
+#navbar button span[id=dark] {
+    display: none;
+}
+
+#navbar button:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+#navbar button:active {
+    background-color: rgba(255, 255, 255, 0.4);
+}
+
+#mobile-navbar .link {
+    display: flex;
+    align-items: center;
+    user-select: none;
+}
+
+#mobile-navbar .link a,
+#mobile-navbar .link div {
+    margin-left: 30px;
+    color: #000;
+    font-family: 'slboot', sans-serif;
+    text-decoration: none;
+    transition: color 300ms, text-shadow 300ms;
+}
+
+#mobile-navbar .link span {
+    font-family: 'MDL2';
+    vertical-align: -2px;
+}
+
+#mobile-navbar .link #nav {
+    display: none;
+}
+
+#mobile-navbar a:hover,
+#mobile-navbar #nav:hover {
+    color: #fff;
+    text-shadow: 4px 4px 4px #000;
+    cursor: pointer;
+}
+
+
+/* Post Cards */
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.card {
+    background-color: #f5f5dc;
+    border: 1px solid #d7d2b4;
+    min-width: calc(50% - 40px);
+    height: 220px;
+    text-decoration: none;
+    color: #000;
+    box-sizing: border-box;
+    transition: box-shadow 200ms, transform 200ms;
+    overflow: hidden;
+}
+
+.card .card-info {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 16px;
+    backdrop-filter: blur(5px);
+    box-sizing: border-box;
+}
+
+.card .card-info h2 {
+    margin: 2px;
+    padding: 0 0 10px 0;
+    font-size: calc(100% + 1vw);
+    font-weight: bold;
+}
+
+.card p {
+    margin: 2px;
+    padding: 0 0 10px 0;
+    font-family: 'MDL2', 'slboot';
+    font-weight: 300;
+}
+
+.card p span {
+    vertical-align: 3px;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    transform: translateY(-5px);
+}
+
+/* Paginator */
+.page-nav {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0px;
+}
+
+/* Post */
+.post {
+    color: #333;
+    align-items: center;
+}
+
+.post-meta {
+    height: 160px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+.post-meta h1 {
+    margin: 0px;
+    font-size: 32px;
+}
+
+.background img {
+    width: 100%;
+    height: 200px;
+    filter: blur(5px);
+    position: absolute;
+    z-index: -1;
+}
+
+.post-info {
+    align-items: center;
+    color: #333;
+    place-content: center;
+    user-select: none;
+    font-family: 'MDL2', 'slboot';
+}
+
+.post-info span {
+    font-family: 'MDL2', 'slboot';
+    vertical-align: -3px;
+}
+
+.post-info a {
+    text-decoration: none;
+    color: #333;
+    font-family: 'dengl';
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.post-content {
+    position: relative;
+    margin: 0px auto 80px auto;
+    width: 60%;
+    padding: 20px;
+    font-family: 'deng', 'emoji';
+}
+
+.post-content p {
+    line-height: 1.5em;
+}
+
+/* Footer */
+footer {
     position: relative;
     margin: 0 10%;
     border-top: 1px solid #808080;
 }
 
-#footer span{
+footer span {
     padding: 4px 0px;
-    font-family: 'slboot','MDL2';
+    font-family: 'slboot', 'MDL2';
     display: flex;
     justify-content: center;
     vertical-align: -3px;
 }
 
-.card-container {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 48px;
-    justify-content: space-around;
-    padding: 10px;
-}
-
-.card {
-    background-color: #d7d2b44f;
-    border: 1px solid #d7d2b4;
-    min-width: calc(50% - 20px);
-    height: 200px;
+footer span a {
+    color: #808080;
     text-decoration: none;
-    color: #000;
-    box-sizing: border-box;
-    margin: 10px;
-    transition: box-shadow 200ms;
+    margin: 0 5px;
 }
 
-.card .card-info{
-    width: 100%;
-    height: 100%;
-    -webkit-backdrop-filter: blur(5px); /* For Safari */
-    backdrop-filter: blur(5px);
-}
+/* Mobile Styles */
+@media (max-width: 800px) {
+    #navbar .link a {
+        display: none;
+    }
 
-.card .card-info h2{
-    margin: 0px;
-    padding: 20px;
-}
+    #navbar .link #nav {
+        display: block;
+    }
 
-.card p{
-    padding-left: 24px;
-    font-family: 'MDL2','slboot';
-    font-weight: 100;
-}
+    #navbar img {
+        width: 140px;
+    }
 
-.card span{
-    vertical-align: 3px;
-}
+    .post-content {
+        min-width: 85%;
+    }
 
-.card h4{
-    padding-left: 24px;
-    font-family: 'dengl';
-}
-
-.card:hover{
-    box-shadow: #000 4px 4px 10px;
+    .card {
+        width: 100%;
+    }
 }
