--- a/css/main.css
+++ b/css/main.css
@@ -351,17 +351,19 @@ h1,h2,h3,p,#footer span{
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    user-select: none;
 }
 
 .post-bg {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    filter: blur(5px);
+    filter: blur(5px) brightness(0.8);
+    pointer-events: none;
 }
 
 .post-info {
-    color: #000;
+    color: #fff;
     position: absolute;
 }
 
@@ -383,7 +385,7 @@ h1,h2,h3,p,#footer span{
 }
 
 .post-detail a {
-    color: #000;
+    color: #fff;
     text-decoration: none;
     font-size: 16px;
 }
@@ -454,6 +456,10 @@ h1,h2,h3,p,#footer span{
 
 .post-content p {
     line-height: 1.5em;
+}
+
+.post-content a {
+    color: #888;
 }
 
 @media (max-width: 800px) {
@@ -548,11 +554,6 @@ footer span a {
 
     #navbar .logo {
         width: 140px;
-    }
-
-    .post-meta {
-        height: 160px;
-        padding: 10px;
     }
 
     .post-meta h1 {
